--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <main style="height: 100%;width: 100%">
-<!--A:  <transfer-data-parent></transfer-data-parent>-->
+<!--A:   <transfer-data-parent></transfer-data-parent>-->
 <!--B:   <app-parent-b></app-parent-b>-->
-    </main>
+<!--C:   <app-parent-c></app-parent-c>-->
+<!--D:   <app-parent-d></app-parent-d>-->
+</main>
